# Found-Speech-Pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  build_gl_extra_asr.sh  build_singularity.sh  create_splits_run_pipeline.sh  notes.md  pipeline_service.py  pyproject.toml  requirements.txt  run_gl_phi_load_test.sh  run_gl_phi_segment_test.sh  run_pipeline.sh  run_pipeline_github.sh  run_singularity.sh  run_singularity_image.sh  run_singularity_pipeline.sh  run_singularity_pipeline_image.sh
.history/steps/: generate_final_data_20260213151953.py
NeMo/nemo/core/classes/: modelPT.py
NeMo/requirements/: requirements_nlp.txt
NeMo/tools/nemo_forced_aligner/: align.py
NeMo/tools/nemo_forced_aligner/utils/: viterbi_decoding.py
containers/: gl-extra-asr.def
deployment/: README.md
deployment/containers/: README.md
deployment/containers/apptainer/: gl-extra-asr.def
deployment/containers/docker/: Dockerfile
deployment/run/: create_splits_run_pipeline.sh  run_pipeline_github.sh  run_singularity_image.sh
environments/gl-enrichment/: pyproject.toml
fsp/: __init__.py  pipeline.py
fsp/core/: __init__.py  alignment.py  audio.py  enrichment.py  punctuation.py  rover.py  segmenter.py  text.py
fsp/data/: __init__.py  norm_dicts_ca.py  norm_dicts_es.py
fsp/utils/: __init__.py  language.py  logging.py  models.py  paths.py  tsv.py
scripts/: clean_and_expand.py  clean_and_split.py  download_models.py  download_punctuation_models.sh  duration_filter.py  fetch_transcript.py  ingest_single.py  norm_dicts_ca.py  norm_dicts_es.py  norm_eu.py  norm_gl.py  normalize.py  normalize_audio.py  normalize_tsv.py  normalize_tsv_v2.py  punctuate.py  rover_merge.py  split.py  youtube_ingest.py
steps/: enrich_segment_hypotheses.py  generate_final_data.py  segment.py
tests/: test_langid.py  test_normalization.py
