[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsp"
version = "0.1.0"
description = "Found-Speech-Pipeline: ASR processing and alignment pipeline"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
dependencies = [
    "fasttext-wheel==0.9.2",
    "huggingface-hub==0.20.3",
    "loguru==0.7.2",
    "nemo-toolkit[asr]==1.23.0",
    "num2words>=0.5",
    "numpy==1.23.5",
    "pandas==2.1.1",
    "sentencepiece==0.1.99",
    "setuptools>=65,<70",
    "soundfile==0.13.1",
    "torch==2.1.0",
    "torchaudio==2.1.0",
    "transformers==4.36.2",
]

[project.optional-dependencies]
fast-rover = ["python-Levenshtein==0.27.1"]
plot = ["matplotlib==3.8.0"]

[dependency-groups]
dev = [
    "black==25.1.0",
    "pytest==7.4.3",
    "ruff>=0.1.0",
]

[project.scripts]
fsp-normalize-tsv = "scripts.normalize_tsv:main"
fsp-normalize-audio = "scripts.normalize_audio:main"
fsp-clean-expand = "scripts.clean_and_expand:main"
fsp-clean-split = "scripts.clean_and_split:main"
fsp-duration-filter = "scripts.duration_filter:main"
fsp-rover-merge = "scripts.rover_merge:main"
fsp-generate-final = "steps.generate_final_data:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fsp*", "scripts*", "steps*"]

[tool.setuptools.package-data]
"fsp.data" = ["*.py"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.uv]
required-version = ">=0.11.15"
environments = ["sys_platform == 'linux'"]
default-groups = []
constraint-dependencies = [
    "datasets==2.14.6",
    "fsspec==2023.10.0",
    "inflect==7.0.0",
    "librosa==0.11.0",
    "protobuf==4.23.4",
    "pyannote-core==5.0.0",
    "pyannote-database==5.0.1",
    "pyannote-metrics==3.2.1",
    "pyarrow==13.0.0",
    "pydantic==1.10.13",
    "pytorch-lightning==2.0.7",
    "scikit-learn==1.3.2",
    "scipy==1.11.3",
    "torchmetrics==1.2.0",
    "wandb==0.15.12",
]

[tool.uv.extra-build-dependencies]
youtokentome = ["cython>=0.29"]
